finally got icons to load. never again. styled buttons

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,10 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.css" rel="stylesheet" media="screen">
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -27,8 +31,10 @@
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
 
+
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
+  
   <div>
     <div>
         <ion-nav-bar class="bar-positive">
