--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- compiled css output -->
@@ -30,68 +31,40 @@
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
-
-
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
+      <div>
+        <div>
+          <ion-side-menus enable-menu-with-back-views="true">
+            <ion-side-menu-content>
+                <ion-nav-bar class="bar-positive nav-title-slide-ios7">
+                    <ion-nav-back-button></ion-nav-back-button>
 
+                    <ion-nav-buttons side="right">
+                        <button class="button button-icon button-clear ion-navicon" menu-toggle="right">
+                        </button>
+                    </ion-nav-buttons>
+                </ion-nav-bar>
+                <ion-nav-view></ion-nav-view>
+            </ion-side-menu-content>
 
-  <div>
-    <div>
-      <ion-side-menus enable-menu-with-back-views="true">
-  <ion-side-menu-content>
-      <ion-nav-bar class="bar-positive nav-title-slide-ios7">
-          <ion-nav-back-button></ion-nav-back-button>
-
-          <ion-nav-buttons side="right">
-              <button class="button button-icon button-clear ion-navicon" menu-toggle="right">
-              </button>
-          </ion-nav-buttons>
-      </ion-nav-bar>
-      <ion-nav-view></ion-nav-view>
-  </ion-side-menu-content>
-
-  <ion-side-menu side="right" width=200 is-enabled=true>
-      <ion-content>
-          <ion-list>
-            <ion-item nav-clear menu-close href="#/home" class="item item-icon-right" >
-                 <i class="icon ion-ios7-ionic-outline"></i>App
-             </ion-item>
-             <ion-item nav-clear menu-close href="#/about" class="item item-icon-right" >
-                  <i class="icon ion-ios7-ionic-outline"></i>About Us
-              </ion-item>
-             <ion-item nav-clear menu-close href="#/disclaimer" class="item item-icon-right" >
-                  <i class="icon ion-ios7-help"></i>Disclaimer
-              </ion-item>
-          </ion-list>
-        </ion-content>
-      </ion-side-menu>
-    </ion-side-menus>
+        <ion-side-menu side="right" width=200 is-enabled=true>
+            <ion-content>
+                <ion-list>
+                  <ion-item nav-clear menu-close href="#/home" class="item item-icon-right" >
+                       <i class="icon ion-ios7-ionic-outline"></i>App
+                   </ion-item>
+                   <ion-item nav-clear menu-close href="#/about" class="item item-icon-right" >
+                        <i class="icon ion-ios7-ionic-outline"></i>About Us
+                    </ion-item>
+                   <ion-item nav-clear menu-close href="#/disclaimer" class="item item-icon-right" >
+                        <i class="icon ion-ios7-help"></i>Disclaimer
+                    </ion-item>
+                </ion-list>
+              </ion-content>
+            </ion-side-menu>
+        </ion-side-menus>
+        </div>
     </div>
-</div>
-
-<script id="contact-modal.html" type="text/ng-template">
-  <div class="modal">
-    <ion-header-bar>
-      <h1 class="title">Edit Contact</h1>
-    </ion-header-bar>
-    <ion-content>
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Name</span>
-          <input type="text" ng-model="contact.name">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Info</span>
-          <input type="text" ng-model="contact.info">
-        </label>
-      </div>
-
-      <button class="button button-full button-energized" ng-click="closeModal()">Done</button>
-    </ion-content>
-  </div>
-</script>
-
-
   </body>
 </html>
